# Osiris

./: .clang-tidy  .gitattributes  .gitignore  Aimbot.cpp  AntiDetection.cpp  Aotian.sln  CMakeLists.txt  Config.cpp  Config.h  GUI.cpp  GUI.h  Hooks.cpp  Hooks.h  Interfaces.h  Jweega.sln  LICENSE  Listener.h  Memory.cpp  Netvars.h  Osiris.cpp  Osiris.sln  Osiris.vcxproj  Osiris.vcxproj.filters  Pattern.cpp  README.md  Visuals.cpp  Visuals.h  bash.sh  build  build-arch  build-ubuntu  cpp.hint  imguiCustom.h  inject.sh  linux-inject.py  load_osiris  tests.runsettings  toolbox.sh
Dependencies/imgui/: CMakeLists.txt  imconfig.h  imgui_impl_dx9.cpp  imgui_stdlib.h
Osiris/freetype/: CMakeLists.txt  ft2build.h
Source/: BuildConfig.h  CMakeLists.txt  Config.cpp  Config.h  ConfigStructs.cpp  ConfigStructs.h  Endpoints.cpp  Endpoints.h  EventListener.cpp  EventListener.h  GUI.cpp  GUI.h  GameData.cpp  GameData.h  GlobalContext.cpp  GlobalContext.h  Helpers.cpp  Helpers.h  HookType.h  Hooks.cpp  Hooks.h  InputUtil.cpp  InputUtil.h  Interfaces.h  Intrinsics.cpp  JsonForward.h  LinuxEndpoints.s  Memory.cpp  Memory.h  Netvars.cpp  Netvars.h  Osiris.cpp  Osiris.vcxproj  Osiris.vcxproj.filters  ProtobufReader.h  RetSpoofGadgets.cpp  RetSpoofGadgets.h  SafeAddress.h  SdlFunctions.h  SmallVariant.h  (+5 more)
Source/BytePatterns/: ClientPatternFinder.h  EnginePatternFinder.h  LinuxClientPatternFinder.h  LinuxEnginePatternFinder.h  WindowsClientPatternFinder.h  WindowsEnginePatternFinder.h
Source/CSGO/: AnimState.h  CMakeLists.txt  CSPlayerInventory.h  Client.h  ClientMode.h  ConVar.h  Cvar.h  EconItemView.h  Engine.h  EngineTrace.h  Entity.cpp  Entity.h  EntityList.h  FileSystem.h  Functions.h  GameEvent.h  GameMovement.h  GlobalVars.h  GlowObjectManager.h  Input.h  InputSystem.h  ItemSchema.h  KeyValues.cpp  KeyValues.h  LocalPlayer.h  Localize.h  Material.h  MaterialSystem.h  MemAlloc.h  ModelInfo.h  ModelRender.h  MoveHelper.h  NetworkChannel.h  Pad.h  Panorama.h  PanoramaMarshallHelper.h  PhysicsSurfaceProps.h  PlantedC4.h  PlayerResource.h  Prediction.h  (+25 more)
Source/Common/: Visibility.h
Source/ConVars/: ConVarAccessor.h  ConVarFinder.h
Source/Config/: Config.h  ConfigFileOperation.h  ConfigFromString.h  ConfigParams.h  ConfigSchema.h  ConfigState.h  ConfigStringConversionState.h  ConfigToString.h  ConfigVariable.h  ConfigVariableChangeHandler.h  ConfigVariableTypes.h  ConfigVariables.h  Configurable.h  HueVariableParams.h  LanguageConfigVariables.h  LoadConfigurator.h  RangeConstrainedVariableParams.h  ResetConfigurator.h  SaveConfigurator.h
Source/Entities/: BaseEntity.h  BaseModelEntity.h  BaseWeapon.h  C4.h  EntityClassifier.h  GameRules.h  GlowProperty.h  HostageServices.h  PlantedC4.h  PlayerController.h  PlayerPawn.h  PlayerWeapons.h  RenderComponent.h  SmokeGrenadeProjectile.h  TeamNumber.h  WeaponServices.h
Source/EntryPoints/: EntryPoints.h  GuiEntryPoints.h  SkyChangerEntryPoint.h
Source/FeatureHelpers/: ClipSpaceCoordinates.h  ConVarAccessor.h  ConVarsBase.h  EntitiesVMTs.h  EntityClassifier.h  EntityForRenderingDispatcher.h  EntityFromHandleFinder.h  EntityListWalker.h  FeatureHelpers.h  FeatureToggle.h  GlobalVarsProvider.h  HudInWorldPanelContainer.h  HudInWorldPanelFactory.h  HudInWorldPanelIndex.h  HudInWorldPanelZOrder.h  HudInWorldPanels.h  ImageShadowParams.h  LifeState.h  MainMenuProvider.h  NormalizedDeviceCoordinates.h  PanelConfigurator.h  PanelShadowParams.h  PanelStylePropertyFactory.h  PanelStyleSetter.h  PanoramaLabelFactory.h  PanoramaTransformations.h  PlayedSound.h  PlayedSounds.h  RenderingHookEntityLoop.h  StylePropertiesSymbols.h  StylePropertiesSymbolsAndVMTs.h  StylePropertiesVMTs.h  StylePropertySymbolMap.h  TogglableFeature.h  ViewToProjectionMatrix.h  WorldToClipSpaceConverter.h
Source/Features/: Features.h  FeaturesStates.h  FeaturesUnloadHandler.h  TogglableFeature.h
Source/FileUtils/: FileSlice.h
Source/GameClasses/: BaseEntity.h  BaseWeapon.h  C4.h  ClientMode.h  ClientPanel.h  EntityIdentity.h  EntitySystem.h  FileNameSymbolTable.h  FileSystem.h  GameRules.h  GameSceneNode.h  GlobalVars.h  HostageServices.h  MapPlayerPreviewPanel.h  MemAlloc.h  Panel.h  PanelAlignmentParams.h  PanelFactory.h  PanelFontParams.h  PanelHandle.h  PanelMarginParams.h  PanelStyle.h  Panels.h  PanoramaImagePanel.h  PanoramaImagePanelContext.h  PanoramaImagePanelFactory.h  PanoramaLabel.h  PanoramaUiEngine.h  PanoramaUiPanel.h  PanoramaUiPanelChildPanels.h  PanoramaUiPanelClasses.h  PanoramaUiPanelContext.h  PanoramaUiPanelIterator.h  PanoramaUiPanelMethodInvoker.h  PlantedC4.h  PlayerController.h  PlayerPawn.h  PlayerWeapons.h  RenderComponent.h  SceneObject.h  (+8 more)
Source/GameClient/: Crosshair.h  FileNameSymbolTable.h  FileNameSymbolTableState.h  FileSystem.h  GameSceneNode.h  GlobalVars.h  MemAlloc.h  MemAllocState.h  PortraitWorld.h
Source/GameDLLs/: Tier0Dll.h
Source/GameDependencies/: ConVarDeps.h  ConVars.h  CvarDeps.h  DepsInstances.h  EntitiesVMTs.h  EntityDeps.h  EntitySystemDeps.h  FileNameSymbolTableDeps.h  FileSystemDeps.h  GameDependencies.h  GameRulesDeps.h  GameSceneNodeDeps.h  GlobalVarsDeps.h  GlowSceneObjectDeps.h  HostageServicesDeps.h  HudDeps.h  MemAllocDeps.h  PanelDeps.h  PanelStyleDeps.h  PanoramaImagePanelDeps.h  PanoramaLabelDeps.h  PanoramaSymbols.h  PanoramaUiEngineDeps.h  PanoramaUiPanelDeps.h  PlantedC4Deps.h  PlayerControllerDeps.h  PlayerPawnDeps.h  RenderComponentDeps.h  SceneObjectDeps.h  SceneObjectUpdaterDeps.h  SceneSystemDeps.h  SmokeGrenadeProjectileDeps.h  TopLevelWindowDeps.h  WeaponDeps.h  WeaponServicesDeps.h  WeaponVDataDeps.h
Source/GlobalContext/: DeferredCompleteObject.h  FullGlobalContext.h  GlobalContext.h  OsirisDirectoryPath.h  PartialGlobalContext.h  PeepEventsHookResult.h  UnloadFlag.h
Source/Hacks/: Aimbot.cpp  Aimbot.h  AntiAim.cpp  Backtrack.cpp  Backtrack.h  CMakeLists.txt  Chams.cpp  Chams.h  Glow.h  (+14 more)
Tests/: CMakeLists.txt  GlobalContextInstance.cpp  HelpersTests.cpp  ItemGeneratorTests.cpp  Main.cpp  SafeAddressTests.cpp  SortFilterTests.cpp  Tests.vcxproj  Tests.vcxproj.filters  UnitTests.cpp  catch.hpp
(+2476 files in other folders)
